envoy.yml
# envoy.yaml
#
# This configuration file sets up Envoy to proxy requests to a local Go application.
# It includes a gRPC health check to monitor the application's status.

admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: go_app_cluster
                  # Enable gRPC streaming
                  timeout: 0s
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: go_app_cluster
    type: STRICT_DNS
    # For gRPC streaming
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          alpn_protocols: ['h2', 'http/1.1']
          # This is the certificate Envoy will present to the Go app
          tls_certificates:
          - certificate_chain: { filename: "./certs/client.crt" }
            private_key: { filename: "./certs/client.key" }
          # This is the CA Envoy will use to verify the Go app's certificate
          validation_context:
            trusted_ca:
              filename: "./certs/ca.crt"
    common_lb_config:
      healthy_panic_threshold:
        value: 0
    load_assignment:
      cluster_name: go_app_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 50051
    health_checks:
      - timeout: 1s
        interval: 2s
        unhealthy_threshold: 3
        healthy_threshold: 1
        grpc_health_check:
          service_name: ""
